@@ -6,6 +6,9 @@ v2.5.0 (XXXX-XX-XX)
 v2.4.1 (XXXX-XX-XX)
 -------------------
 
+* fixed possible segmentation fault when passing a Buffer object into a V8 function 
+  as a parameter
+
 * updated AQB module to 1.8.0.
 
 
